--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -31,7 +31,7 @@ import init.qcom.usb.rc
 import init.target.rc
 
 on early-init
-    export LD_SHIM_LIBS /system/bin/mm-qcamera-daemon|libc_shim.so
+#    export LD_SHIM_LIBS /system/bin/mm-qcamera-daemon|libc_shim.so
 
     # Turn off backlight on blank
     write /sys/class/leds/lcd-backlight/trigger "backlight"
