--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -31,14 +31,8 @@ import init.qcom.usb.rc
 import init.target.rc
 
 on early-init
-    # Turn off backlight on blank
-    write /sys/class/leds/lcd-backlight/trigger "backlight"
+    export LD_SHIM_LIBS /system/lib/libcamera_client.so|libcamera_parameters_shim.so
 
-    mkdir /firmware 0771 system system
-    mkdir /firmware-modem 0771 system system
-    mkdir /system 0777 root root
-    symlink /data/tombstones /tombstones
-    mkdir /dsp 0771 media media
     mount debugfs debugfs /sys/kernel/debug
     chmod 0755 /sys/kernel/debug
 
@@ -48,7 +42,7 @@ on early-init
     symlink /system/etc/firmware/btnv32.bin /bt_firmware/image/btnv32.bin
 
 on init
-    export LD_SHIM_LIBS /system/vendor/lib64/libizat_core.so|libshims_get_process_name.so
+    export LD_SHIM_LIBS /system/lib/libcamera_client.so|libcamera_parameters_shim.so:/system/vendor/lib64/libizat_core.so|libshims_get_process_name.so
 
     # Support legacy paths
     symlink /sdcard /storage/sdcard0
