--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -48,11 +48,7 @@ on early-init
     symlink /system/etc/firmware/btnv32.bin /bt_firmware/image/btnv32.bin
 
 on init
-    # Set permissions for persist partition
-    mkdir /persist 0771 system system
-
-    # Set permissions for efs partition
-    mkdir /efs 0771 system radio
+    export LD_SHIM_LIBS /system/vendor/lib64/libizat_core.so|libshims_get_process_name.so
 
     # Support legacy paths
     symlink /sdcard /storage/sdcard0
