msm8976-common: trigger enableow-power on post-fs-data
Change-Id: I7552875d4121331a14e4878eaccc6810710ee4ad

--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -19,7 +19,8 @@ on boot
 
     # Enable sched boost
     write /proc/sys/kernel/sched_boost 1
-    
+
+on post-fs-data
     trigger enable-low-power
 
 on enable-low-power
