msm8976-common: Fix timekeep.
Timekeep was moved to vendor/bin and ramdisk and sepolicy need to be
updated for that.

Change-Id: I6770dfa78173ab3cb743592bb5159b440892b40a

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1201,6 +1201,9 @@ on post-fs-data
     # Create directory for TZ Apps
     mkdir /data/misc/qsee 0770 system system
 
+    # Create data for timekeep
+    mkdir /data/time/ 0700 system system
+
     # We will remap this as /mnt/sdcard with the sdcard fuse tool
     mkdir /data/misc/camera 0770 camera camera
 
@@ -1480,7 +1483,7 @@ service thermal-engine /vendor/bin/thermal-engine
     group root
     writepid /dev/cpuset/system-background/tasks
 
-service timekeep /system/bin/timekeep restore
+service timekeep /system/vendor/bin/timekeep restore
     class late_start
     user root
     group root
