msm8976-common: support both /data/time and /data/vendor/time
Change-Id: I1560ed71848728384b4c487e0778ab447c620435

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1203,6 +1203,8 @@ on post-fs-data
 
     # Create data for timekeep
     mkdir /data/time/ 0700 system system
+    # symlink to /data/vendor/time
+    symlink /data/time /data/vendor/time
 
     # We will remap this as /mnt/sdcard with the sdcard fuse tool
     mkdir /data/misc/camera 0770 camera camera
