msm8976-common: Hopefully fix GPS
Change-Id: I82aaf09a72dfbdb6b7c6970e91a117b5a67e2e98

--- a/gps/etc/izat.conf
+++ b/gps/etc/izat.conf
@@ -189,7 +189,7 @@ LEAN_TARGETS=DISABLED
 PROCESS_NAME=/system/bin/xtwifi-client
 PROCESS_ARGUMENT=
 PROCESS_STATE=ENABLED
-PROCESS_GROUPS=net_admin wifi inet gps rfs_shared system
+PROCESS_GROUPS=net_admin wifi inet gps oem_2951 system
 PREMIUM_FEATURE=1
 IZAT_FEATURE_MASK=0xf0f
 PLATFORMS=all
